fix: [#1734] increase z-index of context info

--- a/web/src/styles/components/contextual-info.scss
+++ b/web/src/styles/components/contextual-info.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   overflow-y: auto;
   padding: 1.5rem;
-  z-index: 500;
+  z-index: 999999;
   background-color: $info-lighter;
   width: 75vw;
 
